Fixes input sizing on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
   
 }
 
-@media only screen and (max-width: 499px) {
+@media only screen and (max-width: 450px) {
 
   input[type=text] {
     font-size: 1.20rem;
